tests/reject/bad_iden_2.ul
void main() {
     boolean 123;
}